--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.7",
+    "axios": "^0.19.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -15,8 +16,9 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "nodejs-base64-converter": "^1.0.5",
     "nodemon": "^2.0.2",
-    "paymongo": "^0.3.6",
+    "paymongo": "^1.0.2",
     "request": "^2.88.2"
   }
 }
